-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2, 6.4, 6.5
-
None
-
-
17e6e0472 (dev), 30d46fc74 (6.6)
-
DaVinci 87
On the `QAudioSink` documentation, Detailed Description section, there are 3 code snippets:
- How to start playing an audio file — correct
- How to stop the device — incorrect, it's a duplicate of #3
- How to handle `stateChanged()` signal — correct