Doc: Add code snippet for stopping audio output

The current docs have the same code snippet for changed audio state
and for how to stop the output. The code snippet is correct for how to
handle changed state, but not for how to stop the output.

Fixes: QTBUG-116901
Pick-to: 6.6 6.5 6.2
Change-Id: Ibe4e6b14513b97781b85f4706aaadc2bab84b1d0
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>