src/multimedia/audio/qaudiosink.cpp
@@ -45,7 +45,7 @@ QT_BEGIN_NAMESPACE
 
     After the file has finished playing, we need to stop the device:
 
-    \snippet multimedia-snippets/audio.cpp Audio output state changed
+    \snippet multimedia-snippets/audio.cpp Audio output stop
 
     At any given time, the QAudioSink will be in one of four states:
     active, suspended, stopped, or idle. These states are described
